# summlib

./: pyproject.toml  testscript.py
src/summlib/: __init__.py  operations.py  testfile.xml
src2/: testfile.py
tests/: test_operations.py
